JS: Change timing interval on carousel

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block content %}
-<div id="#myCarousel" class="carousel slide" data-bs-ride="carousel">
+<div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-indicators">
       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -46,5 +46,5 @@
   </div>
 {% endblock %}
 {% block postloadjs %}
-<script src="{% static 'static/js/carousel.js' %}"></script>
+  <script src="{% static 'js/carousel.js' %}"></script>
 {% endblock %}
