--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -2,48 +2,55 @@
 {% load static %}
 
 {% block page_header %}
-
+    <div class="container header-container">
+        <div class="row">
+            <div class="col"></div>
+        </div>
+    </div>
 {% endblock %}
 
 {% block content %}
-<div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-indicators">
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-    </div>
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="/media/carousel_image_1.jpg" class="d-block w-100" alt="Weights and water bottle">
-        <div class="carousel-caption d-none d-md-block">
-          <h5>First slide label</h5>
-          <p>Some representative placeholder content for the first slide.</p>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img src="media/carousel_image_2.jpg" class="d-block w-100" alt="Protein Products">
-        <div class="carousel-caption d-none d-md-block">
-          <h5>Second slide label</h5>
-          <p>Some representative placeholder content for the second slide.</p>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img src="media/carousel_image_3.jpg" class="d-block w-100" alt="Man and woman excersising">
-        <div class="carousel-caption d-none d-md-block">
-          <h5>Third slide label</h5>
-          <p>Some representative placeholder content for the third slide.</p>
-        </div>
-      </div>
-    </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
+<div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+  <div class="carousel-indicators text-white">
+    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
+    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
   </div>
+  <div class="carousel-inner">
+    <div class="carousel-item active" data-bs-interval="10000">
+      <!--Fitness Equipment image credited to Cosmopolitan - http://images.summitmedia-digital.com/cosmo/images/2020/07/18/exercise-equipment-at-home-1595034412.jpg -->
+      <img src="media/carousel_image_1.jpg" class="d-block w-100" style="width: 1050px; height:700px;" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <h2 class="text-white">First slide label</h1>
+        <p class="text-white">Some representative placeholder content for the first slide.</p>
+      </div>
+    </div>
+    <div class="carousel-item" data-bs-interval="2000">
+      <!-- Protein Poweder image credited to University of Hull - https://www.hull.ac.uk/editor-assets/images/sport/sport-and-exercise-nutrition-hero-1900x800.xd1badcbf.jpg?crop=1800,800,50,0&f=jpg&q=85 -->
+      <img src="media/carousel_image_2.jpg" style="width:1050px; height:700px;" class="d-block w-100" alt="Protein Powders">
+      <div class="carousel-caption d-none d-md-block">
+        <h2 class="text-white">Second slide label</h2>
+        <p class="text-white">Some representative placeholder content for the second slide.</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <!-- Group Fitness image credited to Unsplash - https://unsplash.com/photos/gJtDg6WfMlQ -->
+      <img src="media/carousel_image_3.jpg" style="width:1050px; height:700px;" class="d-block w-100" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <h2 class="text-white">Third slide label</h2>
+        <p class="text-white">Some representative placeholder content for the third slide.</p>
+      </div>
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
 {% endblock %}
 {% block postloadjs %}
   <script src="{% static 'js/carousel.js' %}"></script>
