--- a/templates/base.html
+++ b/templates/base.html
@@ -1,125 +1,230 @@
 {% load static %}
-
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-    <head>
-        {% block meta %}
+  <head>
+    {% block meta %}
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        {% endblock %} 
-        
-        {% block extra_meta %}
-        {% endblock %} 
-        
-        {% block corecss %}
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
+    {% endblock %}
+	
+    {% block extra_meta %}
+    {% endblock %}
+    {% block corecss %}
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <link rel="stylesheet" href="{% static 'css/base.css' %}">
-        {% endblock %}
-        
-        {% block extra_css %}
-        {% endblock %}
-        
-        {% block corejs %}
+    {% endblock %}
+    {% block extra_css %}
+    {% endblock %}
+    {% block corejs %}
         <script src="https://kit.fontawesome.com/e9c73d7092.js" crossorigin="anonymous"></script>
         <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
         {% endblock %}
-        
-        {% block extra_js %}
-        {% endblock %}
-
-        <title>Love Fitness {% block extra_title %}{% endblock %}</title>
-    </head>
-    <body>
-        <header class="container-fluid fixed-top">
-            <div id="topnav" class="row bg-white pt-lg-2 d-none d-lg-flex">
-                <div class="col-lg-4">
-                    <a href="{% url 'home' %}" class="nav-link main-logo-link">
-                        <h2 class="logo-font text-black my-0"><strong>Love</strong>Fitness</h2>
-                    </a>
-                </div>
-                <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
-                    <form method="GET" action="">
-                        <div class="input-group w-100">
-                            <input class="form-control border border-black rounded-0" type="text" name="q" placeholder="Search our site" />
-                            <div class="input-group-append">
-                                <button class="form-control btn btn-black border border-black rounded-0" value="submit" type="submit">
-                                    <span class="icon">
-                                        <i class="fas fa-search"></i>
-                                    </span>
-                                </button>
-                            </div>
+		
+    {% block extra_js %}
+    {% endblock %}
+    <title>Love Fitness {% block extra_title %}{% endblock %}</title>
+  </head>
+  <body>
+    <!-- Header -->
+    <header class="container-fluid fixed-top">
+        <div id="topnav" class="row bg-white pt-lg-2 d-none d-lg-flex">
+            <div class="col-lg-4">
+                <a href="{% url 'home' %}" class="nav-link main-logo-link">
+                    <h2 class="logo-font text-black my-0"><strong>Love</strong>Fitness</h2>
+                </a>
+            </div>
+            <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
+                <form method="GET" action="">
+                    <div class="input-group w-100">
+                        <input class="form-control border border-black rounded-0" type="text" name="q" placeholder="Search our site" />
+                        <div class="input-group-append">
+                            <button class="form-control btn btn-black border border-black rounded-0" value="submit" type="submit">
+                                <span class="icon">
+                                    <i class="fas fa-search"></i>
+                                </span>
+                            </button>
                         </div>
-                    </form>
-                </div>
-                <div class="col-lg-4 col-sm-4 menu-top-right">
-                    <ul class="list-inline list-unstyled text-center text-lg-right my-0">
-                        <li class="list-inline-item dropdown">
-                            <a class="text-black nav-link" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <div class="text-center">
-                                    <div><i class="fas fa-user fa-lg"></i></div>
-                                    <p class="my-0">My Account</p>
-                                </div>
-                            </a>
-                            <div class="dropdown-menu border-0" aria-labelledby="user-options">
-                                {% if request.user.is_authenticated %}
-                                {% if request.user.is_superuser %}
-                                <a href="" class="dropdown-item">Product Management</a>
-                                {% endif %}
-                                <a href="" class="dropdown-item">My Profile</a>
-                                <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
-                                {% else %}
-                                <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
-                                <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
-                                {% endif %}
+                    </div>
+                </form>
+            </div>
+            <div class="col-lg-4 col-sm-4 menu-top-right">
+                <ul class="list-inline list-unstyled text-center text-lg-right my-0">
+                    <li class="list-inline-item dropdown">
+                        <a class="text-black nav-link" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <div class="text-center">
+                                <div><i class="fas fa-user fa-lg"></i></div>
+                                <p class="my-0">My Account</p>
                             </div>
-                        </li>
-                        <li class="list-inline-item">
-                            <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link" href="">
-                                <div class="text-center">
-                                    <div><i class="fas fa-shopping-bag fa-lg"></i></div>
-                                    <p class="my-0">
-                                        {% if grand_total %}
-                                            £{{ grand_total|floatformat:2 }} 
-                                        {% else %} 
-                                            £0.00 
-                                        {% endif %}
-                                    </p>
-                                </div>
-                            </a>
-                        </li>
-                    </ul>
+                        </a>
+                  
+                        <div class="dropdown-menu border-0" aria-labelledby="user-options">
+                            {% if request.user.is_authenticated %}
+                                {% if request.user.is_superuser %}
+                                    <a href="{% url 'add_product' %}" class="dropdown-item">Product Management</a>
+                                    <a href="{% url 'manage_news_items' %}" class="dropdown-item">News Item Management</a>
+                                {% endif %}
+                                    <a href="{% url 'profile' %}" class="dropdown-item">My Profile</a>
+                                    <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
+                                {% else %}
+                                    <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
+                                    <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
+                            {% endif %}
+                        </div>
+                    </li>
+                     <li class="list-inline-item">
+                        <a class="{% if grand_total %} font-weight-bold{% else %}text-black{% endif %} nav-link" href="">
+                            <div class="text-center">
+                                <div><i class="fas fa-shopping-bag fa-lg"></i></div>
+                                <p class="my-0">
+                                    {% if grand_total %}
+                                        €{{ grand_total|floatformat:2 }}
+                                    {% else %}
+                                        €0.00
+                                    {% endif %}
+                                </p>
+                            </div>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <!-- Mobile and main nav area -->
+        <div class="row bg-white">
+            <nav class="navbar navbar-expand-lg navbar-light w-100">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                    {% include 'includes/mobile-top-header.html' %}
+                    {% include 'includes/main-nav.html' %}
+            </nav>
+        </div>
+        <!-- Banner -->
+        <div id="info-banner" class="row text-center bg-dark-green">
+            <div class="col">
+                <div class="mt-1 mb-1">
+                    <span class="d-none d-lg-inline font-white">Fast dispatch - usually same day!</span>
+                    <span class="d-none d-lg-inline ml-3 mr-3 font-white">-</span>
+                    <span class="font-white">Free delivery on orders over €{{ free_delivery_threshold }}!</span>
+                    <span class="d-none d-lg-inline ml-3 mr-3 font-white">-</span>
+                    <span class="d-none d-lg-inline font-white"> Professional packaging for EVERY order</span>
                 </div>
             </div>
-            <div class="row bg-white">
-              <nav class="navbar navbar-expand-lg navbar-light w-100">
-                  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
-                      <span class="navbar-toggler-icon"></span>
-                  </button>
-                  {% include 'includes/mobile-top-header.html' %}
-                  {% include 'includes/main-nav.html' %}
-              </nav>
-          </div>
-          <div id="delivery-banner" class="row text-center">
-            <div class="col bg-black text-black">
-                <h4 class="logo-font my-1">Free delivery on orders over ${{ free_delivery_threshold }}!</h4>              
-            </div>            
         </div>
-        </header>
-       
-        {% if messages%}
-        <div class="message-container"></div>
-        {% endif %}
-
-        {% block page_header %}
-        {% endblock %}
-        
-        {% block content %}
-        {% endblock %}
-        
-        {% block postloadjs %}
-        {% endblock %}
-    </body>
+    </header>
+    <!-- Toast messages -->
+    {% if messages %}
+        <div class="message-container">
+            {% for message in messages %}
+                {% with message.level as level %}
+                    {% if level == 40 %}
+                        {% include 'includes/toasts/toast_error.html' %}
+                    {% elif level == 30 %}
+                        {% include 'includes/toasts/toast_warning.html' %}
+                    {% elif level == 25 %}
+                        {% include 'includes/toasts/toast_success.html' %}
+                    {% else %}
+                        {% include 'includes/toasts/toast_info.html' %}
+                    {% endif %}
+                {% endwith %}
+            {% endfor %}
+        </div>
+    {% endif %}
+    {% block page_header %}
+    {% endblock %}
+    {% block content %}
+    {% endblock %}
+    <!-- Four text areas -->
+    <div class="container-fluid bg-dark-green pt-4 pb-4">
+        <div class="container">
+            <div class="row">
+            <div class="col-lg-3">
+                <i class="fas fa-cart-plus font-white" aria-hidden=true></i>
+                <span class="font-white">Free delivery for orders of €{{ free_delivery_threshold }} or more</span>
+            </div>
+            <div class="col-lg-3">
+                <i class="fas fa-gifts font-white" aria-hidden=true></i>
+                <span class="font-white">Professional packaging for EVERY order</span>
+            </div>
+            <div class="col-lg-3">
+                <i class="fas fa-shipping-fast font-white" aria-hidden=true></i>
+                <span class="font-white">Fast order dispatch time usually on the next day</span>
+            </div>
+            <div class="col-lg-3">
+                <i class="fas fa-grin-hearts font-white" aria-hidden=true></i>
+                <span class="font-white">Professional and knowledgeable rugby fans</span>
+            </div>
+        </div>    
+      </div>
+    </div>
+  <!-- Footer -->
+  <footer class="bg-light">
+    <div class="container pt-5">
+      <div class="row">
+        <!-- Logo and social media links -->
+        <div class="col-lg-4 col-md-12 mb-4 mb-lg-0"><img src="" alt="" class="mb-3 logo">
+            <a href="{% url 'home' %}" class="nav-link main-logo-link">
+                <h2 class="logo-font text-black my-0"><strong>Love</strong>Fitness</h2>
+            </a>
+          <ul class="list-inline mt-4">
+            <li class="list-inline-item"><a href="https://www.twitter.com" target="_blank" rel="noreferrer" aria-label="Go to our twitter page (opens in new tab)" title="twitter"><i class="dark-green fa fa-twitter"></i></a></li>
+            <li class="list-inline-item"><a href="https://www.facebook.com" target="_blank" rel="noreferrer" aria-label="Go to our facebook page (opens in new tab)" title="facebook"><i class="dark-green fa fa-facebook"></i></a></li>
+            <li class="list-inline-item"><a href="https://www.instagram.com" target="_blank" rel="noreferrer" aria-label="Go to our instagram page (opens in new tab)" title="instagram"><i class="dark-green fa fa-instagram"></i></a></li>
+            <li class="list-inline-item"><a href="https://www.pinterest.com" target="_blank" rel="noreferrer" aria-label="Go to our pinterest page (opens in new tab)" title="pinterest"><i class="dark-green fa fa-pinterest"></i></a></li>
+            <li class="list-inline-item"><a href="https://www.snapchat.com" target="_blank" rel="noreferrer" aria-label="Go to our snapchat page (opens in new tab)" title="snapchat"><i class="dark-green fa fa-snapchat"></i></a></li>
+          </ul>
+        </div>
+        <div class="col-lg-2 col-md-6 mb-4 mb-lg-0">
+          <h2 class="text-uppercase font-weight-bold mb-4 footer-text">Products</h2>
+          <ul class="list-unstyled mb-0">
+            <li class="mb-2"><a href="" class="font-black">Text</a></li>
+            <li class="mb-2"><a href="" class="font-black">Text</a></li>
+            <li class="mb-2"><a href="" class="font-black">Text</a></li>
+          </ul>
+        </div>
+        <div class="col-lg-2 col-md-6 col-xs-6 mb-4 mb-lg-0">
+          <h2 class="text-uppercase font-weight-bold mb-4 footer-text">Website</h2>
+          <ul class="list-unstyled mb-0">
+            {% if request.user.is_authenticated %}
+                {% if request.user.is_superuser %}
+                    <li class="mb-2"><a href="{% url 'add_product' %}" class="font-black">Product Management</a></li>
+                    <li class="mb-2"><a href="{% url 'manage_news_items' %}" class="font-black">News Item Management</a></li>
+                {% endif %}
+                  <li class="mb-2"><a href="{% url 'profile' %}" class="font-black">My Profile</a></li>
+              {% else %}
+                <li class="mb-2"><a href="{% url 'account_signup' %}" class="font-black">Register</a></li>
+                <li class="mb-2"><a href="{% url 'account_login' %}" class="font-black">Login</a></li>
+            {% endif %}
+          </ul>
+        </div>
+        <div class="col-lg-4 col-md-12 mb-lg-0">
+            <!-- Newsletter signup -->
+            <h2 class="text-uppercase font-weight-bold mb-4 footer-text">Newsletter</h2>
+            <p class="mb-4">Sign up for a weekly newsletter for exclusive discounts</p>
+            <div class="p-1 rounded border" id="mailing-list">
+              <form id="mailinglistform" onsubmit="return sendMail(this);">
+                <div class="input-group">
+                  <label for="email_address" hidden>Email Address:</label>
+                  <input type="email" placeholder="Enter your email address" id="email_address" name="email_address" aria-describedby="newsletter" class="form-control border-0 shadow-0">
+                  <div class="input-group-append">
+                    <button id="newsletter" type="submit" value="newsletter" class="btn btn-link green-btn">Signup</button>
+                  </div>
+                </div>
+              </form>
+            </div>
+        </div>
+      </div>
+    </div>
+    <!-- Copyright information -->
+    <div class="bg-light py-1">
+      <div class="container text-center">
+        <p class="mb-0 py-2 footer-font">© 2021 All rights reserved.</p>
+      </div>
+    </div>
+  </footer>
+  {% block postloadjs %}
+  {% endblock %}
+  </body>
 </html>
