--- a/templates/base.html
+++ b/templates/base.html
@@ -164,9 +164,13 @@
     <div class="container pt-5">
       <div class="row">
         <!-- Logo and social media links -->
-        <div class="col-lg-4 col-md-12 mb-4 mb-lg-0"><img src="" alt="" class="mb-3 logo">
+        <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
             <a href="{% url 'home' %}" class="nav-link main-logo-link">
                 <h2 class="logo-font text-black my-0"><strong>Love</strong>Fitness</h2>
+                <ul class="list-unstyled mb-0">
+            <li class="mb-2"><a href="" class="font-black">Text</a></li>
+            
+          </ul>
             </a>
           <ul class="list-inline mt-4">
             <li class="list-inline-item"><a href="https://www.twitter.com" target="_blank" rel="noreferrer" aria-label="Go to our twitter page (opens in new tab)" title="twitter"><i class="dark-green fa fa-twitter"></i></a></li>
