--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -10,8 +10,8 @@
 {% endblock %}
 
 {% block content %}
-<div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
-  <div class="carousel-indicators text-white">
+<div id="carouselExampleDark" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-indicators">
     <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
     <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
     <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
@@ -21,24 +21,24 @@
       <!--Fitness Equipment image credited to Cosmopolitan - http://images.summitmedia-digital.com/cosmo/images/2020/07/18/exercise-equipment-at-home-1595034412.jpg -->
       <img src="media/carousel_image_1.jpg" class="d-block w-100" style="width: 1050px; height:700px;" alt="...">
       <div class="carousel-caption d-none d-md-block">
-        <h2 class="text-white">First slide label</h1>
-        <p class="text-white">Some representative placeholder content for the first slide.</p>
+        <h2 class="text-white">Fitness Equipment</h1>
+        <p class="text-white">View our extensive range of fitness equipment.</p>
       </div>
     </div>
     <div class="carousel-item" data-bs-interval="2000">
       <!-- Protein Poweder image credited to University of Hull - https://www.hull.ac.uk/editor-assets/images/sport/sport-and-exercise-nutrition-hero-1900x800.xd1badcbf.jpg?crop=1800,800,50,0&f=jpg&q=85 -->
       <img src="media/carousel_image_2.jpg" style="width:1050px; height:700px;" class="d-block w-100" alt="Protein Powders">
       <div class="carousel-caption d-none d-md-block">
-        <h2 class="text-white">Second slide label</h2>
-        <p class="text-white">Some representative placeholder content for the second slide.</p>
+        <h2 class="text-white">Sports Nutrition</h2>
+        <p class="text-white">View our extensive range of sports nutrition.</p>
       </div>
     </div>
     <div class="carousel-item">
       <!-- Group Fitness image credited to Unsplash - https://unsplash.com/photos/gJtDg6WfMlQ -->
       <img src="media/carousel_image_3.jpg" style="width:1050px; height:700px;" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
-        <h2 class="text-white">Third slide label</h2>
-        <p class="text-white">Some representative placeholder content for the third slide.</p>
+        <h2 class="text-white">Fitness Classes</h2>
+        <p class="text-white">View our extensive range of fitness classes.</p>
       </div>
     </div>
   </div>
