--- a/static/css/base.css
+++ b/static/css/base.css
@@ -29,6 +29,16 @@ html {
     background-color: #ffffff !important;
 }
 
+.overlay {
+	height: 100%;
+	width: 100%;
+	top: 0;
+	left: 0;
+	position: fixed;
+	background: white;
+	z-index: -1;
+}
+
 /* -------------------------------- Media Queries */
 
 /* Slightly larger container on xl screens */
