Added category filtering

--- a/templates/base.html
+++ b/templates/base.html
@@ -65,6 +65,7 @@
                                 {% if request.user.is_superuser %}
                                     <a href="" class="dropdown-item">Product Management</a>
                                     <a href="" class="dropdown-item">News Item Management</a>
+                                    <a href="" class="dropdown-item">Community</a>
                                 {% endif %}
                                     <a href="" class="dropdown-item">My Profile</a>
                                     <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
