--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -18,13 +18,14 @@
 
         <li class="nav-item dropdown">
             <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="clothing-link" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Equipment
+                Gym Wear
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="clothing-link">
-                <a href="" class="dropdown-item">Activewear &amp; Essentials</a>
-                <a href="" class="dropdown-item">Jeans</a>
-                <a href="" class="dropdown-item">Shirts</a>
-                <a href="" class="dropdown-item">All Clothing</a>
+                <a href="{% url 'products' %}?category=sports_bra" class="dropdown-item">Sports Bra</a>
+                <a href="{% url 'products' %}?category=leggings" class="dropdown-item">Leggings</a>
+                <a href="{% url 'products' %}?category=shorts" class="dropdown-item">Shorts</a>
+                <a href="{% url 'products' %}?category=tops_t-shirts" class="dropdown-item">Tops &amp; T-Shirts</a>
+                <a href="{% url 'products' %}?category=sports_bra,leggings,shorts,tops_t-shirts" class="dropdown-item">All Gym Wear</a>
             </div>
         </li>
         <li class="nav-item dropdown">
@@ -32,10 +33,10 @@
                 Nutrition
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="clothing-link">
-                <a href="" class="dropdown-item">Activewear &amp; Essentials</a>
-                <a href="" class="dropdown-item">Jeans</a>
-                <a href="" class="dropdown-item">Shirts</a>
-                <a href="" class="dropdown-item">All Clothing</a>
+                <a href="{% url 'products' %}?category=sports_nutrition" class="dropdown-item">Sports Nutrition (change later)</a>
+                <a href="" class="dropdown-item"></a>
+                <a href="" class="dropdown-item"></a>
+                <a href="{% url 'products' %}?category=sports_nutrition" class="dropdown-item">All Nutrition</a>
             </div>
         </li>
         
@@ -50,7 +51,7 @@
         </li>
         <li class="nav-item dropdown">
             <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="clothing-link" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Community
+                Contact Us
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="clothing-link">
                 <a href="" class="dropdown-item">Activewear &amp; Essentials</a>
