Added quantity boxes to shopping bag page

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -92,7 +92,9 @@ a.category-badge > span.badge:hover {
 }
 
 /* Back to top button link */
-.btt-link {
+.btt-link,
+.update-link,
+.remove-item {
     cursor: pointer;
 }
 
