Changed button classes to btn-success and btn-danger

--- a/products/templates/products/add_product.html
+++ b/products/templates/products/add_product.html
@@ -13,16 +13,16 @@
     <div class="overlay"></div>
     <div class="container">
         <div class="row">
-            <div class="col-12 col-md-6">
+            <div class="col-12 col-md-6 mx-auto">
                 <hr>
-                <h2 class="logo-font mb-4">Product Management</h2>
-                <h5 class="text-muted">Add a Product</h5>
+                <h2 class="logo-font mb-4 text-center text-black">Product Management</h2>
+                <h5 class="text-muted text-center">Add a Product</h5>
                 <hr>
             </div>
         </div>
 
         <div class="row">
-            <div class="col-12 col-md-6">
+            <div class="col-12 col-md-6 mx-auto">
                 <form method="POST" action="{% url 'add_product' %}" class="form mb-2" enctype="multipart/form-data">
                     {% csrf_token %}
                     {% for field in form %}
@@ -32,9 +32,9 @@
                             {{ field }}
                         {% endif %}
                     {% endfor %}
-                    <div class="text-right">
-                        <a class="btn btn-outline-black rounded-0" href="{% url 'products' %}">Cancel</a>
-                        <button class="btn btn-black rounded-0" type="submit">Add Product</button>
+                    <div class="d-grid gap-2 col-6 mx-auto">
+                        <a class="btn btn-danger rounded-0" href="{% url 'products' %}">Cancel</a>
+                        <button class="btn btn-success rounded-0" type="submit">Add Product</button>
                     </div>
                 </form>
             </div>            
