Added background colour to nav bar

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -19,7 +19,7 @@
   <div class="carousel-inner">
     <div class="carousel-item active" data-bs-interval="10000">
       <!--Fitness Equipment image credited to Cosmopolitan - http://images.summitmedia-digital.com/cosmo/images/2020/07/18/exercise-equipment-at-home-1595034412.jpg -->
-      <img src="media/carousel_image_1.jpg" class="d-block w-100" style="width: 1050px; height:700px;" alt="...">
+      <img src="media/carousel_image_1.jpg" class="d-block w-100" style="width: 1000px;" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h2 class="text-white">Fitness Equipment</h1>
         <p class="text-white">View our extensive range of fitness equipment.</p>
