Refactor: Changed header row

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -27,7 +27,7 @@
     </div>
     <div class="carousel-item" data-bs-interval="2000">
       <!-- Protein Poweder image credited to University of Hull - https://www.hull.ac.uk/editor-assets/images/sport/sport-and-exercise-nutrition-hero-1900x800.xd1badcbf.jpg?crop=1800,800,50,0&f=jpg&q=85 -->
-      <img src="https://ci-ms4-lovefitness.s3.eu-west-2.amazonaws.com/media/carousel_image_2.jpg" style="width:1050px; height:700px;" class="d-block w-100" alt="Protein Powders">
+      <img src="https://ci-ms4-lovefitness.s3.eu-west-2.amazonaws.com/media/carousel_image_2.jpg" class="d-block w-100" alt="Protein Powders">
       <div class="carousel-caption d-none d-md-block">
         <h2 class="">Sports Nutrition</h2>
         <p class="">View our extensive range of sports nutrition.</p>
@@ -52,6 +52,7 @@
     <span class="visually-hidden">Next</span>
   </button>
 </div>
+
 {% endblock %}
 {% block postloadjs %}
   <script src="{% static 'js/carousel.js' %}"></script>
