--- a/static/css/base.css
+++ b/static/css/base.css
@@ -62,10 +62,19 @@ body {
     font-weight: 900;
 }
 
+.carousel-item {
+    height: 100vh;
+    min-height: 350px;
+    background: no-repeat center center scroll;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+  }
+
 .text-black {
     color:#000 !important;
-    font-weight: 900;
-}
+}   
 
 .border-black {
     border: 1px solid black !important;
