Added fitness equipment menu option

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -24,6 +24,7 @@
                 <a href="{% url 'products' %}?category=sports_bra" class="dropdown-item">Sports Bra</a>
                 <a href="{% url 'products' %}?category=leggings" class="dropdown-item">Leggings</a>
                 <a href="{% url 'products' %}?category=shorts" class="dropdown-item">Shorts</a>
+                <a href="{% url 'products' %}?category=fitness_equipment" class="dropdown-item">Fitness Equipment</a>
                 <a href="{% url 'products' %}?category=tops_t-shirts" class="dropdown-item">Tops &amp; T-Shirts</a>
                 <a href="{% url 'products' %}?category=sports_bra,leggings,shorts,tops_t-shirts" class="dropdown-item">All Shop</a>
             </div>
