--- a/templates/includes/toasts/toast_warning.html
+++ b/templates/includes/toasts/toast_warning.html
@@ -1,11 +1,10 @@
-<div class="toast custom-toast" role="alert" aria-live="assertive" aria-atomic="true">
-    <div class="w-100 toast-capper bg-warning"></div>
-    <div class="toast-header bg-white text-dark">
-      <img src="..." class="rounded me-2" alt="...">
-      <strong class="me-auto">Warning!</strong>
-      <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
-    </div>
-    <div class="toast-body text-black">
+<div class="toast show fade text-white bg-warning" role="alert" aria-live="assertive" aria-atomic="true" data-mdb-color="success" data-mdb-autohide="false">
+  <div class="toast-header text-white bg-warning">
+    <i class="fas fa-check fa-lg me-2"></i>
+    <strong class="me-auto">Warning!</strong>
+    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="toast" aria-label="Close"></button>
+  </div>
+  <div class="toast-body bg-white text-muted">
       {{ message }}
     </div>
   </div>
